// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-key slot 1`] = `
<div class="van-number-keyboard" style="display: none;" name="van-slide-up">
  <div class="van-number-keyboard__body">
    <div class="van-number-keyboard__keys">
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">1</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">2</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">3</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">4</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">5</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">6</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">7</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">8</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">9</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--gray">Custom Extra Key</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">0</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--gray van-key--delete">删除</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`focus on key 1`] = `
<div class="van-number-keyboard" style="display: none;" name="van-slide-up">
  <div class="van-number-keyboard__body">
    <div class="van-number-keyboard__keys">
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--active">1</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">2</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">3</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">4</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">5</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">6</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">7</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">8</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">9</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--gray"></div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">0</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--gray van-key--delete">删除</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`focus on key 2`] = `
<div class="van-number-keyboard" style="display: none;" name="van-slide-up">
  <div class="van-number-keyboard__body">
    <div class="van-number-keyboard__keys">
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">1</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">2</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">3</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">4</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">5</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">6</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">7</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">8</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">9</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--gray"></div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">0</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--gray van-key--delete">删除</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`move and blur key 1`] = `
<div class="van-number-keyboard" style="display: none;" name="van-slide-up">
  <div class="van-number-keyboard__body">
    <div class="van-number-keyboard__keys">
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--active">1</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">2</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">3</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">4</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">5</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">6</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">7</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">8</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">9</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--gray"></div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">0</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--gray van-key--delete">删除</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`move and blur key 2`] = `
<div class="van-number-keyboard" style="display: none;" name="van-slide-up">
  <div class="van-number-keyboard__body">
    <div class="van-number-keyboard__keys">
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--active">1</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">2</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">3</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">4</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">5</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">6</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">7</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">8</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">9</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--gray"></div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">0</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--gray van-key--delete">删除</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`move and blur key 3`] = `
<div class="van-number-keyboard" style="display: none;" name="van-slide-up">
  <div class="van-number-keyboard__body">
    <div class="van-number-keyboard__keys">
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">1</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">2</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">3</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">4</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">5</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">6</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">7</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">8</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">9</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--gray"></div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">0</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--gray van-key--delete">删除</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render title 1`] = `
<div class="van-number-keyboard van-number-keyboard--with-title" style="display: none;" name="van-slide-up">
  <div class="van-number-keyboard__title"><span>Title</span><span role="button" tabindex="0" class="van-number-keyboard__close">Close</span></div>
  <div class="van-number-keyboard__body">
    <div class="van-number-keyboard__keys">
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">1</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">2</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">3</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">4</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">5</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">6</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">7</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">8</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">9</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--gray"></div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">0</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--gray van-key--delete">删除</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`title-left slot 1`] = `
<div class="van-number-keyboard van-number-keyboard--with-title" style="display: none;" name="van-slide-up">
  <div class="van-number-keyboard__title"><span class="van-number-keyboard__title-left">Custom Title Left</span></div>
  <div class="van-number-keyboard__body">
    <div class="van-number-keyboard__keys">
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">1</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">2</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">3</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">4</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">5</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">6</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">7</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">8</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">9</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--gray"></div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key">0</div>
      </div>
      <div class="van-key__wrapper">
        <div role="button" tabindex="0" class="van-key van-key--gray van-key--delete">删除</div>
      </div>
    </div>
  </div>
</div>
`;
